--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,5 @@
-fastapi=0.12.1.2
-uvicorn=0.38.0
-python-jose=3.5.0
+fastapi==0.112.1
+uvicorn==0.30.6
+python-jose==3.3.0
+pydantic==2.8.2
+python-multipart==0.0.9
