--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npm run fe\" \"npm run be\"",
+    "fe": "npm run dev",
+    "be": "cd ../backend && uvicorn main:app --reload"
   },
   "dependencies": {
     "react": "^19.2.0",
